--- a/team4_project/src/main/webapp/resources/css/multipleImageSlider.css
+++ b/team4_project/src/main/webapp/resources/css/multipleImageSlider.css
@@ -1,51 +1,51 @@
 html, body {
-	margin: 0;
-	padding: 0;
+   margin: 0;
+   padding: 0;
 }
 
 * {
-	box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 .slider {
-	width: 1050px;
-	margin: 100px auto;
+   width: 1050px;
+   margin: 100px auto;
 }
 
 .slick-slide {
-	margin: 0px 20px;
-	text-align: center;
+   margin: 0px 9px 0px 18px;
+   text-align: center;
 }
 
 .slick-slide img {
-	width: 100%;
+   width: 100%;
 }
 
 .slick-prev:before, .slick-next:before {
-	color: black;
+   color: black;
 }
 
 .slick-slide {
-	transition: all ease-in-out .3s;
-	opacity: .2;
+   transition: all ease-in-out .3s;
+   opacity: .2;
 }
 
 .slick-active {
-	opacity: .5;
+   opacity: 1;
 }
 
 .slick-current {
-	opacity: 1;
+   opacity: 1;
 }
 
 .slick-prev:before {
-	content: "<";
-	color: black;
-	font-size: 30px;
+   content: "<";
+   color: black;
+   font-size: 30px;
 }
 
 .slick-next:before {
-	content: ">";
-	color: black;
-	font-size: 30px;
+   content: ">";
+   color: black;
+   font-size: 30px;
 }
