--- a/team4_project/src/main/webapp/resources/css/styles_board.css
+++ b/team4_project/src/main/webapp/resources/css/styles_board.css
@@ -2,6 +2,13 @@ body {
   width: auto;
   box-sizing: border-box;
 }
+
+ 
+.review_content {
+  display : none;
+}
+
+
 .board {
   margin-left: auto;
   margin-right: auto;
@@ -39,26 +46,29 @@ body {
   width: 100%;
   text-align: center;
 }
-.board .board_table .tr_line table tr td {
+.board .board_table table .view_content td {
   padding: 22px 3px;
 }
-.board .board_table .tr_line table tr .tb_no {
+.board .board_table table .view_content .tb_no {
   width: 69px;
 }
-.board .board_table .tr_line table tr .tb_tit {
-  width: 588px;
+.board .board_table table .view_content .tb_tit {
+  width: 580px;
 }
-.board .board_table .tr_line table tr .tb_name {
+.board .board_table table .view_content .tb_name {
   width: 76.5px;
 }
-.board .board_table .tr_line table tr .tb_date {
+.board .board_table table .view_content .tb_date {
   width: 99px;
 }
-.board .board_table .tr_line table tr .tb_help {
-  width: 39px;
+.board .board_table table .view_content .tb_help {
+  width: 47px;
 }
-.board .board_table .tr_line table tr .tb_count {
+.board .board_table table .view_content .tb_count {
   width: 79.5px;
+}
+.board .board_table table tr .tb_content {
+  width: 951px;
 }
 .clearfix::after {
   content: '';
