--- a/team4_project/src/main/webapp/resources/css/cartList.css
+++ b/team4_project/src/main/webapp/resources/css/cartList.css
@@ -1,23 +1,15 @@
 body {
 	width: auto;
+	color: #4c4c4c;
 }
 
-.title {
+.main {
 	width: 1050px;
 	margin: auto;
 }
-
-form {
-	width: 1050px;
-	margin: auto;
-}
-
-/* 장바구니 */
+/* TITLE 장바구니 */
 .title {
-	overflow: hidden;
-	width: 1050px;
-	margin: 0 auto;
-	padding: 55px 0 46px;
+	
 }
 
 .title h1 {
@@ -27,32 +19,138 @@ form {
 	color: #333;
 	line-height: 50px;
 	text-align: center;
-	letter-spacing: -0.5px;
+	letter-spacing: -.5px;
 }
 
-/*  */
+/* 전체선택 */
+.inner_check {
+	margin-bottom: 10px;
+}
+
+/* box */
 .boxList {
+	border-top: 1px solid #333;
+	padding: 20px 0;
+}
+
+.box_wrapper {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-.box img {
-	width: 100px;
-	height: 100px;
-}
-
-.box *:not(img, #won) {
-	overflow: hidden;
-	max-height: 54px;
-	font-weight: 700;
-	margin: auto 0;
 }
 
 .box {
+	width: 700px;
 	display: flex;
-	justify-content: space-around;
-	width: 1000px;
-	margin-bottom: 30px;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 10px;
+}
+
+.box img {
+	margin-left: 20px; width : 110px;
+	height: 110px;
+	width: 110px;
+}
+
+.btn_clear{
+	right: 5px;
+    top: 50%;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin-top: -13px;
+    border: 0;
+    background-image: url(https://res.kurly.com/pc/service/cart/2007/ico_delete.svg);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+    background-position: 50% 50%;
+}
+/* 가격 */
+.bill {
+	width: 280px;
+	margin-left: 20px;
+}
+
+.amount_view {
+	padding: 9px 18px 18px 20px;
+	border: 1px solid #f2f2f2;
+	background-color: #fafafa;
+	height: 200px;
+	font-size: 18px;
+}
+
+.bill .amount {
+	padding-top: 9px;
+	margin-bottom: 15px;
+}
+
+.amount.lst {
+	margin: 17px 0 0;
+	padding-top: 17px;
+	border-top: 1px solid #eee;
+}
+
+.amount .tit {
+	word-break: break-all;
+	margin-right: 10px;
+}
+
+#won {
+	float: right;
+	font-size: 25px;
+}
+/* 구매하기 버튼 */
+.btn_wrapper {
+	width: auto;
+	height: 56px;
+	border: 1px solid #5f0081;
+	background-color: #5f0080;
+	margin-top: 20px;
+}
+
+#btn_order {
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding-bottom: 2px;
+	border: 0;
+	background: 0 0;
+	font-weight: 700;
+	color: #fff;
+	font-size: 16px;
+	line-height: 52px;
+	letter-spacing: -.1px;
+	text-align: center;
+}
+
+/* checkbox */
+input[type=checkbox] {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+
+input[type=checkbox]:checked+.ico {
+	background-image:
+		url(https://res.kurly.com/mobile/service/common/2006/ico_checkbox_checked.svg);
+	background-color: transparent;
+	background-repeat: no-repeat;
+	background-size: 24px 24px;
+	background-position: 50% 50%;
+}
+
+input[type=checkbox]+.ico {
+	display: inline-block;
+	position: relative;
+	width: 24px;
+	height: 24px;
+	margin-right: 12px;
+	border: 0;
+	background-image:
+		url(https://res.kurly.com/mobile/service/common/2006/ico_checkbox.svg);
+	background-color: transparent;
+	background-repeat: no-repeat;
+	background-size: 24px 24px;
+	background-position: 50% 50%;
+	vertical-align: -7px;
 }
