--- a/team4_project/src/main/webapp/resources/css/sideBar.css
+++ b/team4_project/src/main/webapp/resources/css/sideBar.css
@@ -12,7 +12,7 @@
 .sideBarContainer {
 	width: 80px;
 	font-size: 12px;
-	position: absolute;
+	position: fixed;
 	z-index: 1;
 	right: 20px;
 	top: 70px;
