--- a/team4_project/src/main/webapp/resources/css/earlyBirdContainer.css
+++ b/team4_project/src/main/webapp/resources/css/earlyBirdContainer.css
@@ -24,7 +24,24 @@
 }
 
 #index_image25{
-	
-	width:600px;
-	height:400px;
+	width:700px;
+	height:336px;
+}
+#index_goods_name25{
+	font-size: 16px;
+    line-height: 24px;
+}
+#index_goods_Bprice25{
+	padding-left: 4px;
+    font-size: 14px;
+    color: #999;
+    line-height: 30px;
+    text-decoration: line-through; 
+}
+#index_goods_Pprice25{
+    padding-right: 6px;
+    font-weight: 800;
+    font-size: 20px;
+    color: #fa622f;
+    line-height: 30px;
 }
