--- a/team4_project/src/main/webapp/resources/css/top.css
+++ b/team4_project/src/main/webapp/resources/css/top.css
@@ -1,131 +1,143 @@
 @charset "UTF-8";
-body,
-header {
-  display: -ms-grid;
-  display: grid;
+
+body, header {
+	display: -ms-grid;
+	display: grid;
 }
+
 body {
-  box-sizing: border-box;
-  margin: 0 200px;
-  width: auto;
+	box-sizing: border-box;
+	width: auto;
 }
+
 header {
-  -ms-grid-rows: 1fr 2fr;
-  grid-template-rows: 1fr 2fr;
+	-ms-grid-rows: 1fr 2fr;
+	grid-template-rows: 1fr 2fr;
 }
+
 header .list_menu {
- /*  width: 1050px; */
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  margin: 0 200px;
-  padding-top: 20px;
+	width: 1050px;
+	display: flex;
+	justify-content: flex-end;
+	gap: 10px;
+	margin: 0 200px;
+	padding-top: 20px;
 }
+
 header .list_menu .menu_join {
-  color: #5f0080;
+	color: #5f0080;
 }
-header .list_menu .link_menu{
+
+header .list_menu .link_menu {
 	text-decoration: none;
 }
-.center{
-	color:black;
+
+.center {
+	color: black;
 }
+
 header .bottom img {
-  display: block;
-  width: 115px;
-  height: 75px;
-  margin: 0 auto;
+	display: block;
+	width: 115px;
+	height: 75px;
+	margin: 0 auto;
 }
+
 nav {
-  position: -webkit-sticky;
-  position: sticky;
-  top: -0.5px;
-  background-color: #fff;
-  z-index: 1;
-  border-bottom: 1px solid #f4f4f4;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  gap: 85px;
-  font-weight: 700;
-  color: #000;
-  padding-top: 10px;
-  padding-bottom: 40px;
+	position: -webkit-sticky;
+	position: sticky;
+	top: -0.5px;
+	background-color: #fff;
+	z-index: 1;
+	border-bottom: 1px solid #f4f4f4;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	gap: 85px;
+	font-weight: 700;
+	color: #000;
+	padding-top: 10px;
+	padding-bottom: 40px;
 }
+
 nav a {
-  text-decoration: none;
-  color: #000;
+	text-decoration: none;
+	color: #000;
 }
+
 nav .list {
-  padding-left: 0;
-  list-style-type: none;
-  display: flex;
-  gap: 30px;
-  margin: 0;
-  padding-top: 5px;
-  font-size: 16px;
-  line-height: 20px;
+	padding-left: 0;
+	list-style-type: none;
+	display: flex;
+	gap: 30px;
+	margin: 0;
+	padding-top: 5px;
+	font-size: 16px;
+	line-height: 20px;
 }
+
 nav .list li {
-  margin-right: 70px;
-  padding-right: 20px;
+	margin-right: 70px;
+	padding-right: 20px;
 }
+
 nav .list #last {
-  margin-right: 0;
+	margin-right: 0;
 }
+
 nav .tools {
-  margin-right: 60px;
-  display: flex;
-  gap: 30px;
+	margin-right: 60px;
+	display: flex;
+	gap: 30px;
 }
+
 nav .tools .search {
-  padding-top: 5px;
+	padding-top: 5px;
 }
+
 nav .tools img {
-  width: 27px;
-  height: 27px;
+	width: 27px;
+	height: 27px;
 }
 
 .dropbtn {
-  border: none;
-  background-color: white;
-  font-weight: 700;
-  padding-top: 7px;
-  font-size: 16px;
+	border: none;
+	background-color: white;
+	font-weight: 700;
+	padding-top: 7px;
+	font-size: 16px;
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: white;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 
 .dropdown-content a {
-  color: #333;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+	color: #333;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+	background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
-  border: 1px solid #f4f4f4;
+	display: block;
+	border: 1px solid #f4f4f4;
 }
 
 .dropdown:hover .dropbtn {
-  color: #5f0080;
+	color: #5f0080;
 }
-
-
