상품 디테일

--- a/team4_project/src/main/webapp/resources/css/styles.css
+++ b/team4_project/src/main/webapp/resources/css/styles.css
@@ -326,9 +326,14 @@ main
   .goods_wrap
   .goods_intro
   .goods_intro_pic {
+  margin:auto;
   width: 1000;
   height: 670;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
+
 main
   .goods-view-information
   .goods-view-information-content
